# pi-dsl

./: .gitignore  .gitpod.yml  README.md  analyze-traces.py  architecture.md  flake.nix  home.nix  pi-dsl.cabal  pi-forall.cabal  pyproject.toml  pyrightconfig.json  shell.nix  test_bindings.py
.devcontainer/: devcontainer.json  init.sh  start-nix-daemon.sh
.devcontainer/features/misc/: devcontainer-feature.json  install.sh  opencode.json
.devcontainer/features/nix/: devcontainer-feature.json  install.sh
.ona/: automations.yaml
app/: Main.hs
bindgen/: Main.hs
export/: Export.hs  FFI.hs  export.c
pi_dsl/: __init__.py  base.py  bindings.py  env.py  std.py  sugar.py  term.py  tracing.py
pi_dsl/std/: bool.py  either.py  env.py  eq.py  list.py  maybe.py  nat.py  sigma.py
src/: Bindings.hs  Environment.hs  Equal.hs  Equal.hs-boot  Export.hs  Inductive.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs  TypeCheck.hs-boot
test/: add_comm.py  church.py  datatypes.py  motive_clash.py  nat.py  test_base.py  test_bindings.py
