cabal-Version: 2.2
name: pi-dsl
version: 0.1
build-type: Simple
tested-with: GHC == 9.8.4

common shared-properties
  default-language:
    GHC2021
  ghc-options:
    -Wall -fno-warn-unused-matches -fno-warn-orphans -fno-warn-unused-top-binds -fno-warn-unused-imports -fno-warn-name-shadowing -Wno-unrecognised-pragmas
  default-extensions:
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    QuasiQuotes
    TemplateHaskell
    AllowAmbiguousTypes
    TypeApplications
    LambdaCase
    ParallelListComp

  build-depends:
    base >= 4 && < 5,
    mtl >= 2.2.1,
    pretty >= 1.0.1.0,
    unbound-generics >= 0.4.3,
    transformers,
    array >= 0.3.0.2 && < 0.6,
    containers,
    directory,
    filepath,
    HUnit,
    QuickCheck,
    template-haskell,
    string-interpolate,
    streaming
  if !impl(ghc >= 8.0)
    build-depends: semigroups


library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    Bindings
    Environment
    Equal
    Inductive
    PrettyPrint
    Syntax
    TypeCheck

executable bindgen
  import: shared-properties
  build-depends: pi-dsl
  hs-source-dirs: bindgen
  main-is: Main.hs

foreign-library pi-dsl-shared-lib
  import: shared-properties
  type: native-shared
  build-depends: pi-dsl
  hs-source-dirs: export
  other-modules: Export, FFI
  c-sources: export/export.c
