cabal-Version: 2.2
name: pi-dsl
version: 0.1
build-type: Simple
tested-with: GHC == 9.8.4

common shared-properties
  default-language:
    GHC2021
  default-extensions:
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    QuasiQuotes
    TemplateHaskell
    AllowAmbiguousTypes
    TypeApplications
    LambdaCase
    ParallelListComp

  build-depends:
    base,
    mtl,
    transformers,
    pretty,
    unbound-generics,
    containers,
    template-haskell,
    string-interpolate,
    streaming

library
  import: shared-properties
  hs-source-dirs: src
  exposed-modules:
    Bindings
    Environment
    Equal
    Inductive
    PrettyPrint
    Syntax
    TypeCheck

executable bindgen
  import: shared-properties
  build-depends: pi-dsl
  hs-source-dirs: bindgen
  main-is: Main.hs

foreign-library pi-dsl-shared-lib
  import: shared-properties
  type: native-shared
  build-depends: pi-dsl
  hs-source-dirs: export
  other-modules: Export, FFI
  c-sources: export/export.c
